<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wel"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:background="@color/red"/>

        <Button
            android:id="@+id/ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ph"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:background="@color/blue"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/fst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/orange"
            android:text="@string/log"
            android:textSize="30sp" />

        <Button
            android:id="@+id/scd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fst"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/green"
            android:text="@string/ok"
            android:textSize="30sp" />

        <Button
            android:id="@+id/can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/can"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:background="@color/purple"

            />


    </RelativeLayout>




</LinearLayout>