<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <EditText
        android:id="@+id/un"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:hint="@string/eu"
        android:inputType="text"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:layout_below="@id/un"
        android:layout_marginEnd="10dp"
        android:hint="@string/ep"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:textSize="35sp"
        android:layout_marginStart="80sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="80sp"
        android:layout_marginEnd="80sp"
        android:background="@color/green"
        android:text="@string/log" />



</RelativeLayout>